Fix spacing between in the hero

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .main-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding-top: 50px;
     gap: 50px;
 }
